--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
 		<java.version>11</java.version>
 		<spring-cloud.version>2020.0.1</spring-cloud.version>
 		<keycloak.version>12.0.3</keycloak.version>
+		<cocus-bo.version>0.0.4.RELEASE</cocus-bo.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -50,7 +51,7 @@
 		<dependency>
 			<groupId>com.cocus.microservices</groupId>
 			<artifactId>bo</artifactId>
-			<version>0.0.2.RELEASE</version>
+			<version>${cocus-bo.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.keycloak</groupId>
