--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -55,9 +55,10 @@ keycloak:
   realm: cocus
   auth-server-url: http://localhost:8080/auth
   ssl-required: external
-  resource: cocusclient
+  resource: cocuswebclient
   credentials:
     secret: 70702f9b-e348-4005-ab59-ec17fafb1945
+  public-client: true
   bearer-only: true
   security-constraints[0].authRoles[0]: cocus-role
   security-constraints[0].securityCollections[0].patterns[0]: /api/*
