--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.cocus.microservices</groupId>
 	<artifactId>customer</artifactId>
-	<version>0.0.1.RELEASE-SNAPSHOT</version>
+	<version>0.0.2.RELEASE</version>
 	<name>customer-rest</name>
 	<description>Customer Rest Microservice</description>
 	<properties>
@@ -18,6 +18,7 @@
 		<spring-cloud.version>2020.0.1</spring-cloud.version>
 		<keycloak.version>12.0.3</keycloak.version>
 		<cocus-bo.version>0.0.10.RELEASE</cocus-bo.version>
+		<docker.image.prefix>cocus-microservices</docker.image.prefix>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -101,9 +102,42 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>com.spotify</groupId>
+				<artifactId>docker-maven-plugin</artifactId>
+				<version>0.2.3</version>
 				<configuration>
-					<classifier>exec</classifier>
+					<imageName>${docker.image.prefix}/${project.artifactId}:${project.version}
+					</imageName>
+					<dockerDirectory>src/main/docker</dockerDirectory>
+					<resources>
+						<resource>
+							<directory>${project.build.directory}</directory>
+							<include>${project.build.finalName}.jar</include>
+						</resource>
+					</resources>
 				</configuration>
+				<dependencies>
+					<!-- To make this work on JDK 9+ -->
+					<dependency>
+						<groupId>javax.activation</groupId>
+						<artifactId>javax.activation-api</artifactId>
+						<version>1.2.0</version>
+					</dependency>
+					<!-- API, java.xml.bind module -->
+					<dependency>
+						<groupId>jakarta.xml.bind</groupId>
+						<artifactId>jakarta.xml.bind-api</artifactId>
+						<version>2.3.2</version>
+					</dependency>
+					<!-- Runtime, com.sun.xml.bind module -->
+					<dependency>
+						<groupId>org.glassfish.jaxb</groupId>
+						<artifactId>jaxb-runtime</artifactId>
+						<version>2.3.2</version>
+					</dependency>
+				</dependencies>
 			</plugin>
 		</plugins>
 	</build>
